Minor modifications in comments

--- a/Bubblesort/BubblesortVisualization.ipynb
+++ b/Bubblesort/BubblesortVisualization.ipynb
@@ -101,7 +101,6 @@
     "    plot_values(x, range(ARRAY_SIZE), a)\n",
     "\n",
     "def plot_elements(x, y_vals, col, a):\n",
-    "    # colors\n",
     "    minimum = min(y_vals)\n",
     "    maximum = max(y_vals)\n",
     "    # elements\n",
@@ -173,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Global variables for easier information exchange between sorting and output functions"
+    "## Global variables for easier information exchange between algorithm and output functions"
    ]
   },
   {
@@ -223,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Size of predefined sorting tests"
+    "## Size of predefined tests"
    ]
   },
   {
@@ -283,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
