--- a/Insertionsort/InsertionsortStatistics.ipynb
+++ b/Insertionsort/InsertionsortStatistics.ipynb
@@ -82,29 +82,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "                # elements in array = 10\n",
-      "                # condition checks for-loop = 10\n",
-      "                # executions for-loop = 9\n",
-      "                # condition checks while-loop = 9\n",
-      "                # executions while-loop = 0\n",
-      "                # key assignments = 18\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
@@ -116,22 +101,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "                # elements in array = 10\n",
-      "                # condition checks for-loop = 10\n",
-      "                # executions for-loop = 9\n",
-      "                # condition checks while-loop = 54\n",
-      "                # executions while-loop = 45\n",
-      "                # key assignments = 63\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
@@ -143,22 +113,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "                # elements in array = 10\n",
-      "                # condition checks for-loop = 10\n",
-      "                # executions for-loop = 9\n",
-      "                # condition checks while-loop = 35\n",
-      "                # executions while-loop = 26\n",
-      "                # key assignments = 44\n",
-      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test sorting random array\n",
     "# use numpy for generating a permutation\n",
@@ -176,22 +131,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before sorting: [1, 3, 2]\n",
-      "                # elements in array = 3\n",
-      "                # condition checks for-loop = 3\n",
-      "                # executions for-loop = 2\n",
-      "                # condition checks while-loop = 3\n",
-      "                # executions while-loop = 1\n",
-      "                # key assignments = 5\n",
-      "After  sorting: [1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your test here ...\n",
     "array = [1,3,2]\n",
@@ -212,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Output of statistics to understand the behavior of insertion sort"
+    "## Output of statistics to understand the behavior of algorithm"
    ]
   },
   {
