--- a/Quicksort/Quicksort.ipynb
+++ b/Quicksort/Quicksort.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
