--- a/Quicksort/QuicksortStatistics.ipynb
+++ b/Quicksort/QuicksortStatistics.ipynb
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Output of statistics to understand the behavior of insertion sort"
+    "## Output of statistics to understand the behavior of algorithm"
    ]
   },
   {
