--- a/Quicksort/QuicksortVisualization.ipynb
+++ b/Quicksort/QuicksortVisualization.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Global variables for easier information exchange between sorting and output functions"
+    "## Global variables for easier information exchange between algorithm and output functions"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Size of predefined sorting tests"
+    "## Size of predefined tests"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
