--- a/Searching/SearchingStatistics.ipynb
+++ b/Searching/SearchingStatistics.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test searching algorithms"
+    "## Generate test data and test algorithms"
    ]
   },
   {
