--- a/Searching/SearchingVisualization.ipynb
+++ b/Searching/SearchingVisualization.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Global variable for easier information exchange between searching and output functions"
+    "## Global variable for easier information exchange between algorithms and output functions"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test searching algorithms"
+    "## Generate test data and test algorithms"
    ]
   },
   {
