--- a/Bubblesort/Bubblesort.ipynb
+++ b/Bubblesort/Bubblesort.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
