--- a/Bubblesort/BubblesortStatistics.ipynb
+++ b/Bubblesort/BubblesortStatistics.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Output of statistics to understand the behavior of insertion sort"
+    "## Output of statistics to understand the behavior of algorithm"
    ]
   },
   {
