--- a/Insertionsort/Insertionsort.ipynb
+++ b/Insertionsort/Insertionsort.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
