--- a/Insertionsort/InsertionsortVisualization.ipynb
+++ b/Insertionsort/InsertionsortVisualization.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Global variables for easier information exchange between sorting and output functions"
+    "## Global variables for easier information exchange between algorithm and output functions"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Size of predefined sorting tests"
+    "## Size of predefined tests"
    ]
   },
   {
@@ -306,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test sorting algorithm"
+    "## Generate test data and test algorithm"
    ]
   },
   {
