--- a/Searching/Searching.ipynb
+++ b/Searching/Searching.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test data and test searching algorithms"
+    "## Generate test data and test algorithms"
    ]
   },
   {
