--- a/Mergesort/MergesortStatistics.ipynb
+++ b/Mergesort/MergesortStatistics.ipynb
@@ -19,8 +19,8 @@
     "# this code contains counters for outputting statistics\n",
     "# the counters are incremented after the action to be counted happened\n",
     "# even if we work with lists we count necessary assignment of single keys\n",
-    "def mergesort(a, outputStats = True):\n",
-    "    result, comparison_keys, assignment_key = mergesort_internal(a)\n",
+    "def sort(a, outputStats = True):\n",
+    "    result, comparison_keys, assignment_key = mergesort(a)\n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
     "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mergesort_internal(a):\n",
+    "def mergesort(a):\n",
     "    # initialization of counters\n",
     "    comparison_keys = 0\n",
     "    assignment_key = 0\n",
@@ -43,8 +43,8 @@
     "    if len(a) <= 1:\n",
     "        return a, comparison_keys, assignment_key\n",
     "    mid = len(a) // 2\n",
-    "    left, comp_keys_left, assign_keys_left = mergesort_internal(a[0:mid])\n",
-    "    right, comp_keys_right, assign_keys_right = mergesort_internal(a[mid:len(a)])\n",
+    "    left, comp_keys_left, assign_keys_left = mergesort(a[0:mid])\n",
+    "    right, comp_keys_right, assign_keys_right = mergesort(a[mid:len(a)])\n",
     "    comparison_keys += (comp_keys_left+comp_keys_right)\n",
     "    assignment_key += (assign_keys_left+assign_keys_right)\n",
     "    # improvement in case of (partially) sorted keys\n",
@@ -137,7 +137,7 @@
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, mergesort(sorted_array)[0])"
+    "print(TEXT_AFTER_SORTING, sort(sorted_array)[0])"
    ]
   },
   {
@@ -161,7 +161,7 @@
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
     "print(TEXT_BEFORE_SORTING, reverse_sorted_array)\n",
-    "print(TEXT_AFTER_SORTING, mergesort(reverse_sorted_array)[0])"
+    "print(TEXT_AFTER_SORTING, sort(reverse_sorted_array)[0])"
    ]
   },
   {
@@ -191,7 +191,7 @@
     "# now generate random data and test sorting\n",
     "array = list(numpy.random.permutation(ARRAY_SIZE))\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, mergesort(array)[0])"
+    "print(TEXT_AFTER_SORTING, sort(array)[0])"
    ]
   },
   {
@@ -222,7 +222,7 @@
     "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
-    "print(TEXT_AFTER_SORTING, mergesort(array)[0])"
+    "print(TEXT_AFTER_SORTING, sort(array)[0])"
    ]
   },
   {
@@ -354,7 +354,7 @@
     "results = []\n",
     "for i in ARRAY_SIZES:\n",
     "    sorted_array = list(range(i))\n",
-    "    results.append(mergesort(sorted_array, outputStats=False))\n",
+    "    results.append(sort(sorted_array, outputStats=False))\n",
     "plot_results(results, linear, linear_times_log2)"
    ]
   },
@@ -381,7 +381,7 @@
     "results = []\n",
     "for i in ARRAY_SIZES:\n",
     "    reverse_sorted_array = list(range(i-1, -1, -1))\n",
-    "    results.append(mergesort(reverse_sorted_array, outputStats=False))\n",
+    "    results.append(sort(reverse_sorted_array, outputStats=False))\n",
     "plot_results(results, linear_times_log2, linear_times_log2)"
    ]
   },
@@ -408,7 +408,7 @@
     "results = []\n",
     "for i in ARRAY_SIZES:\n",
     "    array = list(numpy.random.permutation(i))\n",
-    "    results.append(mergesort(array, outputStats=False))\n",
+    "    results.append(sort(array, outputStats=False))\n",
     "plot_results(results, linear_times_log2, linear_times_log2)"
    ]
   },
