--- a/Mergesort/MergesortStatistics.ipynb
+++ b/Mergesort/MergesortStatistics.ipynb
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot the number of executions of for loop and compare it with other behaviors"
+    "## Plot some parameters and compare it with other behaviors"
    ]
   },
   {
