--- a/Mergesort/MergesortStatistics.ipynb
+++ b/Mergesort/MergesortStatistics.ipynb
@@ -23,7 +23,7 @@
     "    result, comparison_keys, assignment_key = mergesort(a)\n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
-    "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
+    "        print(TEXT_SPACING, \"# keys in array =\", len(a))\n",
     "        print(TEXT_SPACING, \"# key comparisons =\", comparison_keys)\n",
     "        print(TEXT_SPACING, \"# key assignments =\", assignment_key)\n",
     "    return result, comparison_keys, assignment_key"
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -126,7 +126,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # key comparisons = 9\n",
       "                # key assignments = 34\n",
       "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
@@ -150,7 +150,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # key comparisons = 28\n",
       "                # key assignments = 34\n",
       "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
@@ -174,7 +174,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # key comparisons = 29\n",
       "                # key assignments = 34\n",
       "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### your tests here ..."
+    "### Your tests here ..."
    ]
   },
   {
@@ -211,7 +211,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [1, 3, 2]\n",
-      "                # elements in array = 3\n",
+      "                # keys in array = 3\n",
       "                # key comparisons = 3\n",
       "                # key assignments = 5\n",
       "After  sorting: [1, 2, 3]\n"
@@ -219,7 +219,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
     "print(TEXT_AFTER_SORTING, sort(array)[0])"
@@ -309,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create plot of number of elements and number of key comparisons (blue) and key assignments (red)\n",
+    "# create plot of number of keys and number of key comparisons (blue) and key assignments (red)\n",
     "# the parameters are used for scaling down the graphical outputs for identification of the function growth\n",
     "def plot_results(results, f1 = no, f2 = no):\n",
     "    plt.figure(figsize=(15, 8))\n",
