--- a/Queue/Queue.ipynb
+++ b/Queue/Queue.ipynb
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### your test here ..."
+    "### Your tests here ..."
    ]
   },
   {
@@ -408,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   }
  ],
