--- a/Queue/QueueVisualization.ipynb
+++ b/Queue/QueueVisualization.ipynb
@@ -358,6 +358,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your tests here ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -376,7 +383,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "init_queue()\n",
     "for i in range(5):\n",
     "    enqueue(0)\n",
@@ -394,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   }
  ],
