--- a/Searching/SearchingStatistics.ipynb
+++ b/Searching/SearchingStatistics.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 100\n",
     "NUM_SEARCHES = 100"
    ]
