--- a/Stack/Stack.ipynb
+++ b/Stack/Stack.ipynb
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### your test here ..."
+    "### Your tests here ..."
    ]
   },
   {
