--- a/Stack/StackVisualization.ipynb
+++ b/Stack/StackVisualization.ipynb
@@ -329,6 +329,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your tests here ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -347,7 +354,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "init_stack()\n",
     "push(15)\n",
     "push(1)\n",
@@ -366,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   }
  ],
