--- a/Bubblesort/BubblesortStatistics.ipynb
+++ b/Bubblesort/BubblesortStatistics.ipynb
@@ -36,7 +36,7 @@
     "            comparison_keys += 1\n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
-    "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
+    "        print(TEXT_SPACING, \"# keys in array =\", len(a))\n",
     "        print(TEXT_SPACING, \"# executions outer loop =\", exec_outer_loop)\n",
     "        print(TEXT_SPACING, \"# executions inner loop =\", exec_inner_loop)\n",
     "        print(TEXT_SPACING, \"# key comparisons =\", comparison_keys)\n",
@@ -75,7 +75,7 @@
     "            break\n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
-    "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
+    "        print(TEXT_SPACING, \"# keys in array =\", len(a))\n",
     "        print(TEXT_SPACING, \"# executions outer loop =\", exec_outer_loop)\n",
     "        print(TEXT_SPACING, \"# executions inner loop =\", exec_inner_loop)\n",
     "        print(TEXT_SPACING, \"# key comparisons =\", comparison_keys)\n",
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### bubblesort without termination condition"
+    "### Bubblesort without termination condition"
    ]
   },
   {
@@ -128,7 +128,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 9\n",
       "                # executions inner loop = 45\n",
       "                # key comparisons = 45\n",
@@ -154,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 9\n",
       "                # executions inner loop = 45\n",
       "                # key comparisons = 45\n",
@@ -180,7 +180,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 9\n",
       "                # executions inner loop = 45\n",
       "                # key comparisons = 45\n",
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### bubblesort with termination condition"
+    "### Bubblesort with termination condition"
    ]
   },
   {
@@ -219,7 +219,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 1\n",
       "                # executions inner loop = 9\n",
       "                # key comparisons = 9\n",
@@ -245,7 +245,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 9\n",
       "                # executions inner loop = 45\n",
       "                # key comparisons = 45\n",
@@ -271,7 +271,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 8\n",
       "                # executions inner loop = 44\n",
       "                # key comparisons = 44\n",
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### your tests here ..."
+    "### Your tests here ..."
    ]
   },
   {
@@ -307,7 +307,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [1, 3, 2]\n",
-      "                # elements in array = 3\n",
+      "                # keys in array = 3\n",
       "                # executions outer loop = 2\n",
       "                # executions inner loop = 3\n",
       "                # key comparisons = 3\n",
@@ -317,7 +317,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
     "print(TEXT_AFTER_SORTING, bubblesort(array)[0])"
@@ -329,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   },
   {
@@ -380,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### bubblesort with and without termination condition"
+    "### Bubblesort with and without termination condition"
    ]
   },
   {
