--- a/Countingsort/Countingsort.ipynb
+++ b/Countingsort/Countingsort.ipynb
@@ -21,12 +21,12 @@
     "    C=[0 for x in range(max(A)+1)]\n",
     "    print_array_C(C)\n",
     "\n",
-    "    # count number of elements = i in C[i]\n",
+    "    # count number of keys = i in C[i]\n",
     "    for j in range(len(A)):\n",
     "        C[A[j]] = C[A[j]] + 1\n",
     "    print_array_C(C)\n",
     "    \n",
-    "    # calculate number of elements <= i in C[i]\n",
+    "    # calculate number of keys <= i in C[i]\n",
     "    for i in range(1,len(C)):\n",
     "        C[i] = C[i] + C[i-1]\n",
     "    print_array_C(C)\n",
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### your tests here ..."
+    "### Your tests here ..."
    ]
   },
   {
