--- a/Heapsort/HeapsortStatistics.ipynb
+++ b/Heapsort/HeapsortStatistics.ipynb
@@ -32,7 +32,7 @@
     "        max_heapify(a, i, 0)\n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
-    "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
+    "        print(TEXT_SPACING, \"# keys in array =\", len(a))\n",
     "        print(TEXT_SPACING, \"# executions max_heapify =\", exec_max_heapify)\n",
     "        print(TEXT_SPACING, \"# key comparisons =\", comparison_keys)\n",
     "        print(TEXT_SPACING, \"# key exchanges =\", exchange_keys)\n",
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -133,7 +133,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions max_heapify = 35\n",
       "                # key comparisons = 41\n",
       "                # key exchanges = 30\n",
@@ -158,7 +158,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions max_heapify = 26\n",
       "                # key comparisons = 35\n",
       "                # key exchanges = 21\n",
@@ -183,7 +183,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions max_heapify = 33\n",
       "                # key comparisons = 39\n",
       "                # key exchanges = 28\n",
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### your tests here ..."
+    "### Your tests here ..."
    ]
   },
   {
@@ -221,7 +221,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [1, 3, 2]\n",
-      "                # elements in array = 3\n",
+      "                # keys in array = 3\n",
       "                # executions max_heapify = 4\n",
       "                # key comparisons = 3\n",
       "                # key exchanges = 3\n",
@@ -230,7 +230,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
     "print(TEXT_AFTER_SORTING, heapsort(array)[0])"
