--- a/Insertionsort/Insertionsort.ipynb
+++ b/Insertionsort/Insertionsort.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -149,6 +149,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your tests here ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -164,7 +171,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
     "a = insertionsort(array)\n",
