--- a/Insertionsort/InsertionsortStatistics.ipynb
+++ b/Insertionsort/InsertionsortStatistics.ipynb
@@ -48,7 +48,7 @@
     "    cond_check_for_loop += 1\n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
-    "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
+    "        print(TEXT_SPACING, \"# keys in array =\", len(a))\n",
     "        print(TEXT_SPACING, \"# condition checks for-loop =\", cond_check_for_loop)\n",
     "        print(TEXT_SPACING, \"# executions for-loop =\", exec_for_loop)\n",
     "        print(TEXT_SPACING, \"# condition checks while-loop =\", cond_check_while_loop)\n",
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -89,7 +89,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "                # keys in array = 10\n",
+      "                # condition checks for-loop = 10\n",
+      "                # executions for-loop = 9\n",
+      "                # condition checks while-loop = 9\n",
+      "                # executions while-loop = 0\n",
+      "                # key assignments = 18\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting sorted array\n",
     "sorted_array = list(range(ARRAY_SIZE))\n",
@@ -101,7 +116,22 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+      "                # keys in array = 10\n",
+      "                # condition checks for-loop = 10\n",
+      "                # executions for-loop = 9\n",
+      "                # condition checks while-loop = 54\n",
+      "                # executions while-loop = 45\n",
+      "                # key assignments = 63\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting reversly sorted array\n",
     "reverse_sorted_array = list(range(ARRAY_SIZE-1, -1, -1))\n",
@@ -113,7 +143,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
+      "                # keys in array = 10\n",
+      "                # condition checks for-loop = 10\n",
+      "                # executions for-loop = 9\n",
+      "                # condition checks while-loop = 35\n",
+      "                # executions while-loop = 26\n",
+      "                # key assignments = 44\n",
+      "After  sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# test sorting random array\n",
     "# use numpy for generating a permutation\n",
@@ -128,12 +173,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your tests here ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sorting: [1, 3, 2]\n",
+      "                # keys in array = 3\n",
+      "                # condition checks for-loop = 3\n",
+      "                # executions for-loop = 2\n",
+      "                # condition checks while-loop = 3\n",
+      "                # executions while-loop = 1\n",
+      "                # key assignments = 5\n",
+      "After  sorting: [1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
     "print(TEXT_AFTER_SORTING, insertionsort(array)[0])"
@@ -145,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   },
   {
@@ -178,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of the arrays in tests can be changed here\n",
+    "# The size of the array in tests can be changed here\n",
     "MIN_ARRAY_SIZE = 1\n",
     "MAX_ARRAY_SIZE = 10"
    ]
@@ -214,7 +280,7 @@
     "for i in range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1):\n",
     "    sorted_array = list(range(i))\n",
     "    results.append(insertionsort(sorted_array, outputStats=False))\n",
-    "# create plot of number of elements and number of checks of conditions while-loop\n",
+    "# create plot of number of keys and number of checks of conditions of while-loop\n",
     "plt.plot([len(r[0]) for r in results],[r[3] for r in results], \"o-\")\n",
     "plt.xticks(range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1))\n",
     "plt.grid(True)\n",
@@ -245,12 +311,19 @@
     "for i in range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1):\n",
     "    reverse_sorted_array = list(range(i-1, -1, -1))\n",
     "    results.append(insertionsort(reverse_sorted_array, outputStats=False))\n",
-    "# create plot of number of elements and number of checks of conditions while-loop\n",
+    "# create plot of number of keys and number of checks of conditions of while-loop\n",
     "plt.plot([len(r[0]) for r in results],[r[3] for r in results], \"o-\")\n",
     "plt.xticks(range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1))\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
