--- a/Mergesort/Mergesort.ipynb
+++ b/Mergesort/Mergesort.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -87,13 +87,6 @@
    "metadata": {},
    "source": [
     "## Generate test data and test algorithm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### bubblesort without termination condition"
    ]
   },
   {
@@ -178,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### your tests here ..."
+    "### Your tests here ..."
    ]
   },
   {
