--- a/Quicksort/QuicksortStatistics.ipynb
+++ b/Quicksort/QuicksortStatistics.ipynb
@@ -34,7 +34,7 @@
     "    \n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
-    "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
+    "        print(TEXT_SPACING, \"# keys in array =\", len(a))\n",
     "        print(TEXT_SPACING, \"# calls of quicksort =\", quicksort_calls)\n",
     "        print(TEXT_SPACING, \"# calls of partition =\", partition_calls)\n",
     "        print(TEXT_SPACING, \"# comparisons of two indexes =\", comparison_indexes)\n",
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -148,7 +148,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # calls of quicksort = 19\n",
       "                # calls of partition = 9\n",
       "                # comparisons of two indexes = 19\n",
@@ -177,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # calls of quicksort = 19\n",
       "                # calls of partition = 9\n",
       "                # comparisons of two indexes = 19\n",
@@ -206,7 +206,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # calls of quicksort = 15\n",
       "                # calls of partition = 7\n",
       "                # comparisons of two indexes = 15\n",
@@ -232,6 +232,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your tests here ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -241,7 +248,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [1, 3, 2]\n",
-      "                # elements in array = 3\n",
+      "                # keys in array = 3\n",
       "                # calls of quicksort = 3\n",
       "                # calls of partition = 1\n",
       "                # comparisons of two indexes = 3\n",
@@ -254,7 +261,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
     "print(TEXT_AFTER_SORTING, sort(array)[0])"
@@ -266,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   },
   {
@@ -387,7 +393,7 @@
     "# test sorting reversly sorted arrays\n",
     "results = []\n",
     "for i in ARRAY_SIZES:\n",
-    "    reverse_sorted_array = list(range(i))\n",
+    "    reverse_sorted_array = list(range(i-1, -1, -1))\n",
     "    results.append(sort(reverse_sorted_array, outputStats=False))\n",
     "plot_results(results)"
    ]
