--- a/Searching/Searching.ipynb
+++ b/Searching/Searching.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10"
    ]
   },
@@ -244,6 +244,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your tests here ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -269,7 +276,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "array = [1,3,5,7]\n",
     "\n",
     "print(TEXT_BEFORE_SEARCHING, array, \"using linear search\")\n",
@@ -287,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   }
  ],
