--- a/Searching/SearchingVisualization.ipynb
+++ b/Searching/SearchingVisualization.ipynb
@@ -29,7 +29,7 @@
     "    steps.append([[NOT_CHECKED]*ARRAY_SIZE, [], a[:]])\n",
     "\n",
     "    for i in range(ARRAY_SIZE):\n",
-    "        if output_compared_elements:\n",
+    "        if output_compared_keys:\n",
     "            steps.append([[], [i,ARRAY_SIZE], a[:]])\n",
     "        if a[ARRAY_SIZE] == a[i]:\n",
     "            steps.append([[NOT_FOUND]*(i)+[FOUND]+[NOT_CHECKED]*(ARRAY_SIZE-(i+1)), [], a[:]])\n",
@@ -65,8 +65,8 @@
     "    right = ARRAY_SIZE-1\n",
     "    while (left <= right):\n",
     "        mid = (left + right) // 2\n",
-    "        # we count the two comparisons of the same elements as one\n",
-    "        if output_compared_elements:\n",
+    "        # we count the two comparisons of the same keys as one\n",
+    "        if output_compared_keys:\n",
     "            steps.append([[], [mid,ARRAY_SIZE], a[:]])\n",
     "        if a[ARRAY_SIZE] == a[mid]:\n",
     "            new_state = steps[index_last_complete_step][0][:mid] +\\\n",
@@ -169,7 +169,7 @@
     "    for i, step in enumerate(steps):\n",
     "        if len(step[0]) > 0:\n",
     "            plot_states(i, step[0], step[2])\n",
-    "        elif output_compared_elements and len(step[1]) > 0:\n",
+    "        elif output_compared_keys and len(step[1]) > 0:\n",
     "            plot_elements(i, step[1], COL_COMPARISON, step[2])\n",
     "\n",
     "    # draw horitontal lines\n",
@@ -226,9 +226,9 @@
    "outputs": [],
    "source": [
     "# steps contains the data for visualization of the single steps\n",
-    "# steps: [[states], [compared elements], [array]]\n",
-    "# [states] state for each position is one of [sorted, partially sorted, unsorted]\n",
-    "# [compared elements]: two indexes in a list\n",
+    "# steps: [[states], [compared keys], [array]]\n",
+    "# [states] state for each position is one of [found, not found, not checked]\n",
+    "# [compared keys]: two indexes in a list\n",
     "# [array]: copy of array in current state\n",
     "steps = []\n",
     "# used as base for the next step showing the states\n",
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuration data for elements in output "
+    "## Configuration data for keys in output "
    ]
   },
   {
@@ -253,8 +253,8 @@
    "outputs": [],
    "source": [
     "# change output settings here\n",
-    "output_compared_elements = False\n",
-    "output_compared_elements = True"
+    "output_compared_keys = False\n",
+    "output_compared_keys = True"
    ]
   },
   {
@@ -310,7 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10"
    ]
   },
@@ -608,6 +608,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your tests here ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -633,7 +640,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "array = [1,2,3,4,5,6]\n",
     "ARRAY_SIZE = len(array)\n",
     "key = 6\n",
@@ -651,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   }
  ],
