--- a/Selectionsort/SelectionsortStatistics.ipynb
+++ b/Selectionsort/SelectionsortStatistics.ipynb
@@ -37,7 +37,7 @@
     "        exchange_keys += 1\n",
     "    if outputStats:\n",
     "        # output of counters, \"# ...\" means \"number of ...\"\n",
-    "        print(TEXT_SPACING, \"# elements in array =\", len(a))\n",
+    "        print(TEXT_SPACING, \"# keys in array =\", len(a))\n",
     "        print(TEXT_SPACING, \"# executions outer loop =\", exec_outer_loop)\n",
     "        print(TEXT_SPACING, \"# executions inner loop =\", exec_inner_loop)\n",
     "        print(TEXT_SPACING, \"# key comparisons =\", comparison_keys)\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The size of elements in tests can be changed here\n",
+    "# The size of array in tests can be changed here\n",
     "ARRAY_SIZE = 10\n",
     "# Some output text\n",
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 9\n",
       "                # executions inner loop = 45\n",
       "                # key comparisons = 45\n",
@@ -109,7 +109,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 9\n",
       "                # executions inner loop = 45\n",
       "                # key comparisons = 45\n",
@@ -135,7 +135,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [2, 8, 4, 9, 1, 6, 7, 3, 0, 5]\n",
-      "                # elements in array = 10\n",
+      "                # keys in array = 10\n",
       "                # executions outer loop = 9\n",
       "                # executions inner loop = 45\n",
       "                # key comparisons = 45\n",
@@ -158,6 +158,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your tests here ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -167,7 +174,7 @@
      "output_type": "stream",
      "text": [
       "Before sorting: [1, 3, 2]\n",
-      "                # elements in array = 3\n",
+      "                # keys in array = 3\n",
       "                # executions outer loop = 2\n",
       "                # executions inner loop = 3\n",
       "                # key comparisons = 3\n",
@@ -177,7 +184,6 @@
     }
    ],
    "source": [
-    "# your test here ...\n",
     "array = [1,3,2]\n",
     "print(TEXT_BEFORE_SORTING, array)\n",
     "print(TEXT_AFTER_SORTING, selectionsort(array)[0])"
@@ -189,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... and here ...\n"
+    "# ... and here ..."
    ]
   },
   {
@@ -258,7 +264,7 @@
     "for i in range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1):\n",
     "    sorted_array = list(range(i))\n",
     "    results.append(selectionsort(sorted_array, outputStats=False))\n",
-    "# create plot of number of elements and number of key comparisons and key exchanges\n",
+    "# create plot of number of keys and number of key comparisons and key exchanges\n",
     "plt.plot([len(r[0]) for r in results],[r[3] for r in results], \"bo-\") # blue dot\n",
     "plt.plot([len(r[0]) for r in results],[r[4] for r in results], \"co-\") # cyan dot\n",
     "plt.xticks(range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1))\n",
@@ -290,7 +296,7 @@
     "for i in range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1):\n",
     "    reverse_sorted_array = list(range(i-1, -1, -1))\n",
     "    results.append(selectionsort(reverse_sorted_array, outputStats=False))\n",
-    "# create plot of number of elements and number of key comparisons and key exchanges\n",
+    "# create plot of number of keys and number of key comparisons and key exchanges\n",
     "plt.plot([len(r[0]) for r in results],[r[3] for r in results], \"bo-\") # blue dot\n",
     "plt.plot([len(r[0]) for r in results],[r[4] for r in results], \"co-\") # cyan dot\n",
     "plt.xticks(range(MIN_ARRAY_SIZE, MAX_ARRAY_SIZE+1))\n",
