added Copyright Notice and Title

--- a/Priority Queue/PriorityQueue.ipynb
+++ b/Priority Queue/PriorityQueue.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7ad2136c-749e-4464-815b-6187813e1352",
+   "metadata": {},
+   "source": [
+    "<font size=\"5\">Copyright 2022 Edward Späth, Frankfurt University of Applied Sciences, FB2, Computer Science  \n",
+    "No liability or warranty; only for educational and non-commercial purposes     \n",
+    "See some basic hints for working with Jupyter notebooks in README.md</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b64fc437-51f6-48e9-bd5c-f2be4526d342",
    "metadata": {},
    "source": [
     "<font size=\"6\">Data Structure for storing Keys with their respective Priorities</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "939b39bf-8948-464f-aca0-a22d7c4cd483",
+   "metadata": {},
+   "source": [
+    "<font size=\"6\">Data Structure Priority Queue</font>"
    ]
   },
   {
@@ -408,7 +426,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7f312c3d2cd0>"
+       "<graphviz.graphs.Graph at 0x7f26c4427b50>"
       ]
      },
      "execution_count": 9,
