Accidentally switched up 2 Cells. Fixed it.

--- a/Priority Queue/PriorityQueue.ipynb
+++ b/Priority Queue/PriorityQueue.ipynb
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b64fc437-51f6-48e9-bd5c-f2be4526d342",
-   "metadata": {},
-   "source": [
-    "<font size=\"6\">Data Structure for storing Keys with their respective Priorities</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "939b39bf-8948-464f-aca0-a22d7c4cd483",
    "metadata": {},
    "source": [
     "<font size=\"6\">Data Structure Priority Queue</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b64fc437-51f6-48e9-bd5c-f2be4526d342",
+   "metadata": {},
+   "source": [
+    "<font size=\"6\">Data Structure for storing Keys with their respective Priorities</font>"
    ]
   },
   {
@@ -426,7 +426,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7f26c4427b50>"
+       "<graphviz.graphs.Graph at 0x7f52cc15a3a0>"
       ]
      },
      "execution_count": 9,
