Fixed a Text formatting Issue

--- a/Priority Queue/PriorityQueue.ipynb
+++ b/Priority Queue/PriorityQueue.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ad2136c-749e-4464-815b-6187813e1352",
+   "id": "dc264796-8850-41c0-b997-dc6a48007557",
    "metadata": {},
    "source": [
-    "<font size=\"5\">Copyright 2022 Edward Späth, Frankfurt University of Applied Sciences, FB2, Computer Science  \n",
-    "No liability or warranty; only for educational and non-commercial purposes     \n",
+    "<font size=\"5\">Copyright 2022 Edward Späth, Frankfurt University of Applied Sciences, FB2, Computer Science\\\n",
+    "No liability or warranty; only for educational and non-commercial purposes\\\n",
     "See some basic hints for working with Jupyter notebooks in README.md</font>"
    ]
   },
@@ -426,7 +426,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7f52cc15a3a0>"
+       "<graphviz.graphs.Graph at 0x7f2d219a9d90>"
       ]
      },
      "execution_count": 9,
