Should follow naming conventions now v2

--- a/Priority Queue/PriorityQueue.ipynb
+++ b/Priority Queue/PriorityQueue.ipynb
@@ -255,34 +255,34 @@
     "\n",
     "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "initialize (initial_elements)\n",
+    "initialize(initial_elements)\n",
     "\n",
     "# Prints the current contents of the Priority Queue aswell as size\n",
     "# The Boolean Values allow you to select what you want to be printed.\n",
     "# In the example below both Name and Priority of each Element will be printed\n",
     "# Calling print_pq without parameters is the same as both Booleans being True\n",
-    "print_pq (show_name = True, show_prio = True)\n",
+    "print_pq(show_name = True, show_prio = True)\n",
     "\n",
     "# If you only want the name to be printed, have \"show_name = True\" and \"show_prio = False\":\n",
     "# And vice versa\n",
-    "print_pq (show_name = True, show_prio = False)\n",
+    "print_pq(show_name = True, show_prio = False)\n",
     "\n",
     "# Extracts the Element with the lowest Priority and Prints what its Data was\n",
-    "extract_min ()\n",
+    "extract_min()\n",
     "\n",
-    "print_pq (show_name = True, show_prio = True)\n",
+    "print_pq(show_name = True, show_prio = True)\n",
     "\n",
     "# Same Idea as with intial_elements but only one Element at a time\n",
-    "insert_key ('F', 3)\n",
+    "insert_key('F', 3)\n",
     "\n",
     "print_pq (show_name = True, show_prio = True)\n",
     "\n",
     "# Instead of creating a new unique name, give the name of an existing Element whose Priority you want to change (give new Priority as right value)\n",
-    "reduce_priority ('F', 2)\n",
+    "reduce_priority('F', 2)\n",
     "\n",
-    "print_pq (show_name = False, show_prio = True)\n",
+    "print_pq(show_name = False, show_prio = True)\n",
     "\n",
-    "reset_pq () # Resets Contents of Priority Queue (ignore)"
+    "reset_pq() # Resets Contents of Priority Queue (ignore)"
    ]
   },
   {
@@ -317,15 +317,15 @@
    "source": [
     "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "initialize (initial_elements)\n",
+    "initialize(initial_elements)\n",
     "\n",
-    "print_pq (show_name = True, show_prio = True)\n",
+    "print_pq(show_name = True, show_prio = True)\n",
     "\n",
-    "reduce_priority ('F', 2)\n",
+    "reduce_priority('F', 2)\n",
     "\n",
-    "print_pq (show_name = True, show_prio = True)\n",
+    "print_pq(show_name = True, show_prio = True)\n",
     "\n",
-    "reset_pq () # Resets Contents of Priority Queue (ignore)"
+    "reset_pq() # Resets Contents of Priority Queue (ignore)"
    ]
   },
   {
@@ -345,11 +345,11 @@
    "source": [
     "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "initialize (initial_elements)\n",
+    "initialize(initial_elements)\n",
     "\n",
-    "insert_key ('F', 3)\n",
+    "insert_key('F', 3)\n",
     "\n",
-    "reduce_priority ('A', 3)"
+    "reduce_priority('A', 3)"
    ]
   },
   {
@@ -426,7 +426,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7fdd447837f0>"
+       "<graphviz.graphs.Graph at 0x7f6c73e887f0>"
       ]
      },
      "execution_count": 9,
