Corrected implementation of extract_min()

--- a/Priority Queue/PriorityQueue.ipynb
+++ b/Priority Queue/PriorityQueue.ipynb
@@ -152,7 +152,8 @@
     "        return      \n",
     "    min_element = ELEMENTS[0]\n",
     "    HEAPSIZE -= 1\n",
-    "    ELEMENTS = ELEMENTS[1:] # Deletes first Element\n",
+    "    ELEMENTS[0], ELEMENTS[HEAPSIZE] = ELEMENTS[HEAPSIZE], ELEMENTS[0] # Swaps first Element and last Element to delete the previous first and bubble down the previous last\n",
+    "    ELEMENTS = ELEMENTS[:HEAPSIZE] # Deletes last Element\n",
     "    min_heapify(0)   \n",
     "    print(\"\\nElement\", min_element.name, \"with Priority\", min_element.prio, \"has been extracted\")\n",
     "        \n",
