Renamed stuff to make more sense

--- a/Priority Queue/PriorityQueue.ipynb
+++ b/Priority Queue/PriorityQueue.ipynb
@@ -118,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def initialize(initial_elements=[]):\n",
-    "    for name_input, prio_input in initial_elements:\n",
+    "def insert_multiple(elements_to_insert=[]):\n",
+    "    for name_input, prio_input in elements_to_insert:\n",
     "        insert_key(name_input, prio_input)\n",
     "        \n",
     "def insert_key(name_input, prio_input):\n",
@@ -235,37 +235,37 @@
       "Element D with Priority 1 has been extracted\n",
       "\n",
       "The current Priority Queue of size 3 is: --> Printing Names: True - Printing Priorities: True\n",
-      "[('B', 2), ('C', 6), ('A', 4)]\n",
+      "[('B', 2), ('A', 4), ('C', 6)]\n",
       "\n",
       "The current Priority Queue of size 4 is: --> Printing Names: True - Printing Priorities: True\n",
-      "[('B', 2), ('F', 3), ('A', 4), ('C', 6)]\n",
+      "[('B', 2), ('F', 3), ('C', 6), ('A', 4)]\n",
       "\n",
       "The current Priority Queue of size 4 is: --> Printing Names: False - Printing Priorities: True\n",
-      "[2, 2, 4, 6]\n"
+      "[2, 2, 6, 4]\n"
      ]
     }
    ],
    "source": [
-    "# This list saves the initial Elements you want to Enqueue. The Name of the Key is written in Ticks ('') on the left side of each pair\n",
+    "# This list saves the Elements you want to Enqueue at once. The Name of the Key is written in Ticks ('') on the left side of each pair\n",
     "# The corresponding Priority is written on the right side of each pair\n",
     "# This example initializes the Priority Queue with a Key named 'A' with Priority 4, another Key named 'B' with Priority 2, etc\n",
     "# Note that this is a MIN-PRIORITY-QUEUE. The lower the number representing Priority, the higher the Priority (lower is better)\n",
     "\n",
-    "# If you dont want to initialize anything leave the array empty --> \"initial_elements = []\"\n",
-    "# Alternatively remove initial_elements from the initialize-function's parameters --> \"initialize ()\"\n",
+    "# If you dont want to initialize anything leave the array empty --> \"elements_to_insert = []\"\n",
+    "# Alternatively remove elements_to_insert from the insert_multiple-function's parameters --> \"insert_multiple()\"\n",
     "\n",
-    "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
+    "elements_to_insert = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "initialize(initial_elements)\n",
+    "insert_multiple(elements_to_insert)\n",
     "\n",
-    "# Prints the current contents of the Priority Queue aswell as size\n",
+    "# Prints the current contents of the Priority Queue aswell as size.\n",
     "# The Boolean Values allow you to select what you want to be printed.\n",
     "# In the example below both Name and Priority of each Element will be printed\n",
     "# Calling print_pq without parameters is the same as both Booleans being True\n",
     "print_pq(show_name = True, show_prio = True)\n",
     "\n",
-    "# If you only want the name to be printed, have \"show_name = True\" and \"show_prio = False\":\n",
-    "# And vice versa\n",
+    "# If you only want the names to be printed, have \"show_name = True\" and \"show_prio = False\":\n",
+    "# Or vice versa\n",
     "print_pq(show_name = True, show_prio = False)\n",
     "\n",
     "# Extracts the Element with the lowest Priority and Prints what its Data was\n",
@@ -273,7 +273,7 @@
     "\n",
     "print_pq(show_name = True, show_prio = True)\n",
     "\n",
-    "# Same Idea as with intial_elements but only one Element at a time\n",
+    "# Same Idea as with insert_multiple but only one Element at a time\n",
     "insert_key('F', 3)\n",
     "\n",
     "print_pq(show_name = True, show_prio = True)\n",
@@ -308,21 +308,19 @@
       "The current Priority Queue of size 4 is: --> Printing Names: True - Printing Priorities: True\n",
       "[('D', 1), ('B', 2), ('C', 6), ('A', 4)]\n",
       "\n",
-      "ERROR: Element whose Priority you want to decrease does not exist\n",
-      "\n",
       "The current Priority Queue of size 4 is: --> Printing Names: True - Printing Priorities: True\n",
-      "[('D', 1), ('B', 2), ('C', 6), ('A', 4)]\n"
+      "[('D', 1), ('B', 2), ('C', 3), ('A', 4)]\n"
      ]
     }
    ],
    "source": [
-    "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
+    "elements_to_insert = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "initialize(initial_elements)\n",
+    "insert_multiple(elements_to_insert)\n",
     "\n",
     "print_pq(show_name = True, show_prio = True)\n",
     "\n",
-    "reduce_priority('F', 2)\n",
+    "reduce_priority('C', 3)\n",
     "\n",
     "print_pq(show_name = True, show_prio = True)\n",
     "\n",
@@ -344,9 +342,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
+    "elements_to_insert = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "initialize(initial_elements)\n",
+    "insert_multiple(elements_to_insert)\n",
     "\n",
     "insert_key('F', 3)\n",
     "\n",
@@ -427,7 +425,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7f6c73e887f0>"
+       "<graphviz.graphs.Graph at 0x7f385c248520>"
       ]
      },
      "execution_count": 9,
